# multidrone-detection-tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml
assets/: Drone_Detection_with_Swin_Transformer.ipynb  Drone_Detection_with_YOLOv5_Tutorial.ipynb  Drone_Detection_with_YOLOv8_Tutorial.ipynb
deepsort/include/: logging.h
include/: BoundingBox.h  BoundingBoxes.h  ObjectCount.h  manager.hpp
include/darknet_ros_msgs/: BoundingBox.h  BoundingBoxes.h
rosdev/: rviz.rviz
src/: main.cpp  manager.cpp
yolo/src/: yolov5_lib.cpp
